--- a/lib/Stepper/stepper.scss
+++ b/lib/Stepper/stepper.scss
@@ -1,4 +1,4 @@
-@import "Step/Step";
+@import "./step";
 
 .stepper {
   height: 100%;
@@ -44,8 +44,8 @@
   }
 
   &-item {
-    max-width: 150px;
     flex: 1 1 0;
+    max-width: 100%;
 
     //hide first & last step-line
     &:first-child .step-line:first-child, &:last-child .step-line:last-child {
