--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@
 @import "./Popover/popover";
 @import "./RadioButtons/radio_button";
 @import "./SmallCalendar/small_callendar";
-@import "./Stepper/Stepper";
+@import "./Stepper/stepper";
 @import "./Tab/tab";
 @import "./TextArea/text_area";
 @import "./Toggle/toogle";
@@ -24,4 +24,4 @@
 @import "./InfoMessage/infomessage";
 @import "./RequiredLabel/requiredLabel";
 @import "./Attachment/attachment";
-@import "./FilterConditionBuilder/filter_condition_builder"
+@import "./FilterConditionBuilder/filter_condition_builder";
