--- a/src/Attachment/_attachment.scss
+++ b/src/Attachment/_attachment.scss
@@ -1,4 +1,5 @@
-@import "file";
+@import "InnerComponents/File/file";
+@import "InnerComponents/Loader/loader";
 
 .swf-attach-input {
   position: relative;
@@ -51,6 +52,7 @@
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
     text-align: center;
+    cursor: default;
 
     .--invalid {
       border-color: red;
@@ -61,6 +63,10 @@
       border-color: #a5a5a5;
       color: #a5a5a5;
       cursor: default;
+    }
+
+    &.--disabled{
+      opacity: 0.7;
     }
   }
 
@@ -83,6 +89,12 @@
       color: #a5a5a5;
       box-shadow: none;
       cursor: default;
+    }
+
+    &.--disabled{
+      border-color: #a5a5a5;
+      color: #a5a5a5;
+      cursor: not-allowed;
     }
   }
 
@@ -134,7 +146,6 @@
       color: green;
     }
   }
-
 
 }
 
