--- a/src/FilterConditionBuilder/Components/FilterConditionItem/_filter_condition_item.scss
+++ b/src/FilterConditionBuilder/Components/FilterConditionItem/_filter_condition_item.scss
@@ -16,7 +16,13 @@
     .dropdown-container {
         width: 100%;
         margin-right: 5px;
-
+        .swf-dropdown-main-container {
+            width: 100%;
+            .dropdown-button {
+                border: 1px solid #e4e6e7;
+                background: #fff;
+            }
+        }
     }
 
     .btn-container {
