--- a/src/FilterConditionBuilder/_filter_condition_builder.scss
+++ b/src/FilterConditionBuilder/_filter_condition_builder.scss
@@ -24,7 +24,7 @@
     display: none;
     &.--is-collapsed {
         padding: 10px;
-        background-color: rgb(231, 233, 235);
+        background-color: rgb(255, 255, 255);
         border-top: 1px solid rgb(190, 193, 198);
         border-bottom: 1px solid rgb(190, 193, 198);
         display: block;
@@ -42,6 +42,9 @@
                     justify-content: flex-start;
                     .btn {
                         margin-right: 3px;
+                        .swf-button {
+                            border: none;
+                        }
                     }
                 }
             }
@@ -86,7 +89,7 @@
                     left: 30px;
                     padding: 0 10px;
                     font-size: 16px;
-                    background: rgb(231, 233, 235);
+                    background: rgb(255, 255, 255);
                 }
             }
         }
