fix: query get in textarea

--- a/lib/FilterConditionBuilder/Components/ExpandDropdown/_dropdown.scss
+++ b/lib/FilterConditionBuilder/Components/ExpandDropdown/_dropdown.scss
@@ -39,7 +39,7 @@
       cursor: pointer;
       padding: var(--dropdown-padding) calc(var(--dropdown-padding) + 12px) var(--dropdown-padding) var(--dropdown-padding);
       border-radius: 0.5rem;
-      border: none;
+      border: 1px solid #e4e6e7;
       background: rgb(255, 255, 255);
       height: 2rem;
       color: black;
