fix: popover height in ExpDropdown

--- a/lib/FilterConditionBuilder/Components/ExpandDropdown/_dropdown.scss
+++ b/lib/FilterConditionBuilder/Components/ExpandDropdown/_dropdown.scss
@@ -7,6 +7,7 @@
 
   .popover-content-keeper {
     max-width: none !important;
+    max-height: none !important;
   }
   .dropdown-label {
     margin-right: 0.5rem;
