--- a/src/LookupField/_look_up.scss
+++ b/src/LookupField/_look_up.scss
@@ -4,10 +4,9 @@
  //   position: absolute;
     display: flex;
     flex-direction: column;
-    max-height: 300px;
     overflow: auto;
-    width: 98%;
-    will-change: transform;
+  //  width: 98%;
+  //  will-change: transform;
    // top: 48px;
    // left: 7px;
     margin:  0;
