fix: delete value remove from displayValue Map by label not id

--- a/lib/LookupField/_look_up.scss
+++ b/lib/LookupField/_look_up.scss
@@ -77,6 +77,8 @@
 
     .form-control--start {
       flex-wrap: wrap;
+      overflow: auto;
+      max-height: 10rem;
     }
 
     .form-control--start > * {
