--- a/src/Pill/_pill.scss
+++ b/src/Pill/_pill.scss
@@ -28,7 +28,7 @@
     -webkit-tap-highlight-color: transparent
   }
 
-  &.--xs {
+  &.--sm {
     height: 24px;
   }
 
@@ -36,7 +36,7 @@
     height: 32px;
   }
 
-  &.--lg {
+  &.--xl {
     height: 40px;
   }
 
