--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,4 @@
 @import "./RequiredLabel/requiredLabel";
 @import "./Attachment/attachment";
 @import "./FilterConditionBuilder/filter_condition_builder";
+@import "./TextLink/textlink";
