feat: Label value content ellipsis

--- a/lib/LabelValue/_labelvalue.scss
+++ b/lib/LabelValue/_labelvalue.scss
@@ -2,4 +2,12 @@
   label{
     font-family: Arial;
   }
+
+  .label-value-content {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 160px;
+    height: 1em;
+    white-space: nowrap;
+  }
 }
