--- a/lib/LabelValue/_labelvalue.scss
+++ b/lib/LabelValue/_labelvalue.scss
@@ -26,17 +26,13 @@
     }
   }
 
-  font-size: var(--label-value-text-size);
-  margin: 0.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-
-
   &.--display-flex{
     display: flex;
   }
 
 
   .label-content{
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     display: inline-flex;
     margin: auto 0.5rem auto 0;
     font-size: var(--label-size);
@@ -55,11 +51,13 @@
     }
 
     &.text-value {
+      margin: auto 0;
+      font-size: var(--label-value-text-size);
       text-overflow: ellipsis;
       overflow: hidden;
       max-width: 300px;
       white-space: nowrap;
-      font-size: 1rem;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     }
   }
 }
