--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,4 @@
 @import "./Attachment/attachment";
 @import "./FilterConditionBuilder/filter_condition_builder";
 @import "./TextLink/textlink";
+@import "./HighlightedValue/highlightedValue";
