--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -111,8 +111,8 @@
 
     &.--desktop {
       grid-template-areas:
-            ". main-buttons"
-            "header-content additional-buttons";
+            "additional-buttons main-buttons"
+            "header-content";
       grid-template-rows: 1.5rem;
     }
 
