--- a/lib/HighlightedValue/_highlightedValue.scss
+++ b/lib/HighlightedValue/_highlightedValue.scss
@@ -57,16 +57,17 @@
     background: rgba(var(--highlighted-background-color), 0.16);
   }
 
-
-  margin: 10px;
   display: inline-flex;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: var(--highlighted-text-size);
   line-height: 1.5;
 
-  border-radius: 0.5rem;
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
   width: fit-content;
+
+  &.--round{
+    border-radius: 0.5rem;
+  }
 
   span{
     margin: auto;
