--- a/src/Alert/_alert.scss
+++ b/src/Alert/_alert.scss
@@ -1,8 +1,14 @@
 .swf-alert-container{
+//yellow #FFEB3B 255, 235, 59
+//grey-blue #607D8B 96, 125, 139
+  // green #4CAF50 76, 175, 80
+  // red #f44336 244, 67, 54
+  //grey #9E9E9E 158, 158, 158
+  //blue #2196F3 33, 150, 243
 
-  &.critical{
-    --alert-background-color: #f1cecd;
-    --alert-border-color: red;
+  &.yellow{
+    --alert-background-color: rgba(255, 235, 59, 0.4);
+    --alert-border-color: #FFEB3B;
   }
 
   &.high{
