--- a/src/InfoMessage/_infomessage.scss
+++ b/src/InfoMessage/_infomessage.scss
@@ -1,5 +1,36 @@
 
 .info-message {
+
+  &.yellow{
+    --message-background-color: #fffbc9;
+    --message-border-color: #f5bb00;
+  }
+
+  &.red{
+    --message-background-color: #fcdddc;
+    --message-border-color: #f44336;
+  }
+
+  &.green{
+    --message-background-color: #e0ffe2;
+    --message-border-color: #4CAF50;
+  }
+
+  &.blue{
+    --message-background-color: #dceefc;
+    --message-border-color: #2196F3;
+  }
+
+  &.grey-blue{
+    --message-background-color: #d3e1e8;
+    --message-border-color: #607D8B;
+  }
+
+  &.grey{
+    --message-background-color:  #e8e8e8;
+    --message-border-color: #9E9E9E;
+  }
+
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     margin: 3px 0 0 0;
     padding: 3px;
@@ -11,28 +42,8 @@
     text-overflow: ellipsis;
     font-size: 14px;
 
-    background: #f2dede;
-    color: red;
-
-    &.warning{
-      background: #faebcc;
-      color: orangered;
-    }
-
-    &.positive{
-      background: #dff0d8;
-      color: green;
-    }
-
-    &.info{
-      background: #d9edf7;
-      color: cornflowerblue;
-    }
-
-    &.suggestion{
-      background: lavender;
-      color: blueviolet;
-    }
+    background: var(--message-background-color);
+    color: var(--message-border-color);
 
 
   .input-message-content {
