--- a/lib/Dropdown/_dropdown.scss
+++ b/lib/Dropdown/_dropdown.scss
@@ -7,6 +7,8 @@
   --dropdown-padding: 0.5rem;
 
   .dropdown-label {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    min-height: 1rem;
     margin-right: 0.5rem;
     font-size: 1rem;
     overflow: hidden;
@@ -37,6 +39,10 @@
       border: none;
       background: rgb(228, 230, 231);
       color: black;
+
+      &.hideCaret{
+        padding: var(--dropdown-padding) 0 var(--dropdown-padding) var(--dropdown-padding);
+      }
 
       &.opened {
         border-bottom-left-radius: 0;
