feat: Badge component, filterCondition badge

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -27,3 +27,4 @@
 @import "./FilterConditionBuilder/filter_condition_builder";
 @import "./TextLink/textlink";
 @import "./HighlightedValue/highlightedValue";
+@import "./Badge/styles";
