fix: Modal change main buttons justify to end

--- a/lib/Modal/_modal.scss
+++ b/lib/Modal/_modal.scss
@@ -135,6 +135,7 @@
     &.--mobile > .main-buttons {
       -ms-grid-row: 1;
       -ms-grid-column: 1;
+      justify-self: end;
     }
 
     .additional-buttons {
