--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -152,6 +152,7 @@
     &.--mobile > .additional-buttons {
       -ms-grid-row: 1;
       -ms-grid-column: 2;
+      justify-self: start;
     }
 
     .header-content {
