--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -103,6 +103,7 @@
         border-radius: 0;
         border-color: #ffff;
         padding: calc(.5rem * var(--mv9-Tvprj--8tAf8z-1Jrjt, 1)) calc(.5rem * var(--mv9-Tvprj--9Apz8-1Jrjt, 1));
+        grid-template-rows: 10rem 1fr 0;
       }
     }
 
