--- a/src/Checkbox/_checkbox.scss
+++ b/src/Checkbox/_checkbox.scss
@@ -43,8 +43,8 @@
     position: absolute;
     cursor: pointer;
     top: 0;
-    //transform: translateY(-50%);
-   // z-index: -1;
+   // transform: translateY(-50%);
+    z-index: -1;
   }
 
   .checkbox-label{
