TextArea: add styles

--- a/src/TextArea/_text_area.scss
+++ b/src/TextArea/_text_area.scss
@@ -83,4 +83,10 @@
         }
     }
 
+    .form-control.readonly {
+        background: #ebebeb;
+        cursor: default;
+       // opacity: 0.5;
+    }
+
 }
