--- a/src/TextArea/_text_area.scss
+++ b/src/TextArea/_text_area.scss
@@ -84,8 +84,9 @@
     }
 
     .form-control.readonly {
-        background: #ebebeb;
         cursor: default;
+        background: rgb(228, 230, 231);
+        border-color: transparent;
        // opacity: 0.5;
     }
 
