--- a/src/Button/_button.scss
+++ b/src/Button/_button.scss
@@ -132,6 +132,7 @@
   align-items: center;
   width: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  line-height: 1.5;
   white-space: nowrap;
   cursor: pointer;
 
